Have a very crude PO update routine working

--- a/templates/app.html
+++ b/templates/app.html
@@ -11,8 +11,9 @@
     <title>Hello from Flask</title>
     <h1>Hello, Pymoo!</h1>
 
-    <img src="data:image/gif;base64,{{image}}"
-    alt="Base64 encoded image" width="300" height="300"/>
+    <div id="po-container"></div>
+    <!--<img src="data:image/gif;base64,{{image}}"
+      alt="Base64 encoded image" width="300" height="300"/>-->
   </body>
 
 </html>
