--- a/Dashboard.css
+++ b/Dashboard.css
@@ -5,4 +5,18 @@
      
 }
 
+#overview-tab, .overview-tab-r, .overview-tab-r > td  {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+#overview-tab{
+  font-size: 1.2rem;
+}
+
+
+.overview-tab-r > td {
+  padding: 0.4rem;  
+}
+
 
