--- a/Dashboard.css
+++ b/Dashboard.css
@@ -3,6 +3,10 @@ html {
   font-family: Open Sans,sans-serif;
 }
 
+body {
+  margin: 0;
+}
+
 h1 {
   font-size: 3rem;
 }
@@ -47,11 +51,29 @@ h2 {
   box-shadow: 5px 5px #c6c6c6;
   background-color: white;
   margin: 2rem 0 2rem 0;
+  cursor: pointer;
 }
 
 .widget > img {
   width: 100%;
 }
 
+.highlighted {
+ 
+  /* Center in view port */ 
+  position: fixed; 
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+  width: calc(90vw - 2rem);
+  height: calc(90vh - 2rem);
+  margin: 0;
+}
+
+.highlighted.widget > img {
+  height: 100%;
+  width: auto;
+}
 
 
